Fixed event overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -59,8 +59,6 @@ nav {
 .event-box {
     margin: 1em 0;
     padding: 1em;
-    max-width: 10em;
-    max-height: 10em;
     border: 1px solid black;
     border-radius: 10px;
 }
